# proot-cri

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
hack/: build-android.sh  build-deps.sh  compile-proto.rs
proto/: api.proto
src/: cri.rs  engine.rs  errors.rs  main.rs  storage.rs  utils.rs
src/cri/: runtime.rs
test/: client-test.sh  container-config.json
