[package]
name = "android-proot-cri"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0.95"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
rand = "0.9.0"
flate2 = "1.0.35"
tempfile = "3.16.0"
tar = "0.4.43"
nix = { version = "0.29.0", features = ["process", "signal"] }

[[bin]]
name = "test-init"


[build-dependencies]
tonic-build = "*"
