[package]
name = "android-cri"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "process", "rt-multi-thread", "signal"] }
anyhow = "1.0.95"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.138"
rand = "0.9.0"
flate2 = "1.0.35"
tempfile = "3.16.0"
tar = "0.4.43"
nix = { version = "0.29.0", features = ["process", "signal"] }
clap = { version = "4.5.28", features = ["derive"] }
env_filter = "0.1.3"
thiserror = "2.0.11"
oci-client = { path = "./build/rust-oci-client/", default-features = false, features = ["rustls-tls"] }
serde = "1.0.217"

[[bin]]
name = "test-init"


[build-dependencies]
tonic-build = "*"
